--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id("org.jetbrains.dokka") version "1.7.10"
+    id 'org.jetbrains.dokka' version "1.7.10"
 
 }
+
 
 
 task clean(type: Delete) {
