--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,3 +27,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #        BRANCH: gh-pages
         publish_dir: ./build/dokka/html
+      # builds zip file with kdoc website inside
+    - name: Archive KDoc Documentation
+      uses: actions/upload-artifact@v2
+      with:
+          name: KDoc Documentation Site
+          path: build/dokka/html
