--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ plugins {
 
 }
 
-
+dependencies {
+ classpath 'com.dicedmelon.gradle:jacoco-android:0.1.5'
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
