--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,10 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.dokka' version "1.7.10"
+    id 'jacoco'
 
 }
 
-dependencies {
- classpath 'com.dicedmelon.gradle:jacoco-android:0.1.5'
-}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
