--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.dokka' version "1.7.10"
-    id 'jacoco'
+    id "com.dicedmelon.gradle.jacoco-android" version "0.1.5"
 
 }
 
