--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenCentral() // optional if you have this one already
+    }
+    dependencies {
+        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'org.jetbrains.dokka' version "1.7.10"
-    id "com.dicedmelon.gradle.jacoco-android" version "0.1.5"
 
 }
 
