--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ plugins {
 
 }
 
+apply plugin: "com.vanniktech.android.junit.jacoco"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
