update for code coverage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
     buildTypes {
 
         debug {
-            testCoverageEnabled true // https://github.com/codecov/example-android
+            testCoverageEnabled true // https://github.com/codecov/example-android - we need to add this extra line!!!
         }
 
 
