--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -81,3 +81,20 @@ jobs:
       with:
           name: KDoc Documentation Site
           path: app/build/dokka/html
+    
+  Code_Coverage:  # https://github.com/arturdm/jacoco-android-gradle-plugin/blob/master/example/build.gradle
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 28
+          script: ./gradlew jacocoTestReport connectedCheck. # if your folder is in a path, change this to ./FolderName/gradleW
+      - name: Upload coverage reports to Codecov
+        run: | # if your project is hosted on a folder --> go to the folder before executing this
+          curl -Os https://uploader.codecov.io/latest/macos/codecov 
+          chmod +x codecov
+          ./codecov
