update android yaml

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -83,8 +83,16 @@ jobs:
           path: app/build/dokka/html
     
   Code_Coverage:  # https://github.com/arturdm/jacoco-android-gradle-plugin/blob/master/example/build.gradle
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+
       - uses: actions/checkout@v2
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
