--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -100,7 +100,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 28
-          script: ./gradlew jacocoTestReport connectedCheck. # if your folder is in a path, change this to ./FolderName/gradleW
+          script: ./gradlew jacocoTestReportDebug connectedCheck. # if your folder is in a path, change this to ./FolderName/gradleW
       - name: Upload coverage reports to Codecov
         run: | # if your project is hosted on a folder --> go to the folder before executing this
           curl -Os https://uploader.codecov.io/latest/macos/codecov 
