--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,14 +20,13 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
-    - name: Grant execute permission for gradlew
-     # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-          api-level: 28
-          script: ./gradlew build
+      - uses: actions/checkout@v2
+      - name: Grant execute permission for gradlew
+      # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
+        run: chmod +x gradlew
+      - name: Unit tests
+      # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
+        run: ./gradlew assembleDebug
 
   Instrumental_Tests:
     runs-on: ubuntu-latest
@@ -100,7 +99,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 28
-          script: ./gradlew jacocoTestReportDebug connectedCheck. # if your folder is in a path, change this to ./FolderName/gradleW
+          script: ./gradlew jacocoTestReportDebug connectedCheck # if your folder is in a path, change this to ./FolderName/gradleW
       - name: Upload coverage reports to Codecov
         run: | # if your project is hosted on a folder --> go to the folder before executing this
           curl -Os https://uploader.codecov.io/latest/macos/codecov 
