--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,14 +19,13 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-
-      - uses: actions/checkout@v2
-      - name: Grant execute permission for gradlew
+    - uses: actions/checkout@v2
+    - name: Grant execute permission for gradlew
       # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
-        run: chmod +x gradlew
-      - name: Unit tests
+      run: chmod +x gradlew
+    - name: Build APK
       # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
-        run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug
 
   Instrumental_Tests:
     runs-on: ubuntu-latest
