--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -101,6 +101,6 @@ jobs:
           script: ./gradlew jacocoTestReportDebug connectedCheck # if your folder is in a path, change this to ./FolderName/gradleW
       - name: Upload coverage reports to Codecov
         run: | # if your project is hosted on a folder --> go to the folder before executing this
-          curl -Os https://uploader.codecov.io/linux/codecov 
+          curl -Os https://uploader.codecov.io/latest/linux/codecov
           chmod +x codecov
           ./codecov
