--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -81,7 +81,7 @@ jobs:
           path: app/build/dokka/html
     
   Code_Coverage:  # https://github.com/arturdm/jacoco-android-gradle-plugin/blob/master/example/build.gradle
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - name: set up JDK 11
@@ -97,10 +97,10 @@ jobs:
       - name: Run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 28
+          api-level: 29
           script: ./gradlew createDebugCoverageReport # if your folder is in a path, change this to ./FolderName/gradleW
       - name: Upload coverage reports to Codecov
         run: | # if your project is hosted on a folder --> go to the folder before executing this
-          curl -Os https://uploader.codecov.io/latest/linux/codecov
+          curl -Os https://uploader.codecov.io/latest/macos/codecov
           chmod +x codecov
           ./codecov
