--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    repositories {
-        mavenCentral() // optional if you have this one already
-    }
+    ext.jacocoVersion = '0.8.7'
     dependencies {
-        classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.16.0'
+        classpath "org.jacoco:org.jacoco.core:$jacocoVersion"
     }
 }
 
@@ -16,7 +14,6 @@ plugins {
 
 }
 
-apply plugin: "com.vanniktech.android.junit.jacoco"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
