--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,7 +25,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build APK
       # working-directory: ./FolderName  #Uncomment me - if your gradle file is inside a folder
-      run: ./gradlew tasks # assembleDebug
+      run: ./gradlew assembleDebug # assembleDebug
 
   Instrumental_Tests:
     runs-on: ubuntu-latest
@@ -98,7 +98,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew createDebugCoverageReport # if your folder is in a path, change this to ./FolderName/gradleW
+          script: ./gradlew jacocoCombinedTestReports # if your folder is in a path, change this to ./FolderName/gradleW
       - name: Upload coverage reports to Codecov
         run: | # if your project is hosted on a folder --> go to the folder before executing this
           curl -Os https://uploader.codecov.io/latest/macos/codecov
